testdata/asm/invalid/fncall_invalid_05.lisp
;;
(defcolumns (X :i20) (Y :i16))
(defcall (Y) f (X))
